--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,7 @@
     "require": {
         "php": "^7.3|^8.0",
         "flipbox/lumen-generator": "^9.2",
-        "laravel/lumen-framework": "^8.3.1",
-        "tymon/jwt-auth": "dev-develop"
+        "laravel/lumen-framework": "^8.3.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
