--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,10 @@
     "type": "project",
     "require": {
         "php": "^7.3|^8.0",
+        "darkaonline/swagger-lume": "8.*",
         "flipbox/lumen-generator": "^9.2",
-        "laravel/lumen-framework": "^8.3.1"
+        "laravel/lumen-framework": "^8.3.1",
+        "zircote/swagger-php": "3.*"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
